@@ -1,0 +1,78 @@
+{
+   "abstract" : "Provide GHTTP support for L<LWP::UserAgent> via L<HTTP::GHTTP>.",
+   "author" : [
+      "Gisle Aas <gisle@activestate.com>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Zilla version 5.043, CPAN::Meta::Converter version 2.150005",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : 2
+   },
+   "name" : "LWP-Protocol-GHTTP",
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "0"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Pod::Coverage::TrustPod" : "0",
+            "Test::CPAN::Changes" : "0.4",
+            "Test::CheckManifest" : "1.29",
+            "Test::Kwalitee" : "1.22",
+            "Test::More" : "0.88",
+            "Test::PAUSE::Permissions" : "0",
+            "Test::Pod" : "1.41",
+            "Test::Pod::Coverage" : "1.08",
+            "Test::Pod::Spelling::CommonMistakes" : "1.000",
+            "Test::Spelling" : "0.12"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Carp" : "0",
+            "HTTP::GHTTP" : "1.07",
+            "HTTP::Message" : "6.0",
+            "LWP::UserAgent" : "6.15",
+            "Try::Tiny" : "0.24",
+            "perl" : "5.008001",
+            "strict" : "0",
+            "warnings" : "0"
+         }
+      },
+      "test" : {
+         "requires" : {
+            "HTTP::Daemon" : "6.0",
+            "Test::More" : "0.88"
+         }
+      }
+   },
+   "provides" : {
+      "LWP::Protocol::GHTTP" : {
+         "file" : "lib/LWP/Protocol/GHTTP.pm",
+         "version" : "6.16"
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/genio/lwp-protocol-ghttp/issues"
+      },
+      "homepage" : "https://github.com/genio/lwp-protocol-ghttp",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/genio/lwp-protocol-ghttp.git",
+         "web" : "https://github.com/genio/lwp-protocol-ghttp"
+      }
+   },
+   "version" : "6.16",
+   "x_contributors" : [
+      "Chase Whitener <capoeirab@cpan.org>"
+   ]
+}
+
