@@ -1,49 +1,61 @@
-use 5.008001;
+# This Makefile.PL for LWP-Protocol-GHTTP was generated by
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.35.
+# Don't edit it but the dist.ini and plugins used to construct it.
+
 use strict;
-use warnings FATAL => 'all';
+use warnings;
+
+use 5.008001;
 use ExtUtils::MakeMaker;
 
-# The dependency on libghttp is too flakey to smoke test
-exit(0) if $ENV{AUTOMATED_TESTING}; # do not smoke
-
-WriteMakefile(
-    NAME             => 'LWP::Protocol::GHTTP',
-    AUTHOR           => q{Gisle Aas <gisle@activestate.com>},
-    VERSION_FROM     => 'lib/LWP/Protocol/GHTTP.pm',
-    ABSTRACT_FROM    => 'lib/LWP/Protocol/GHTTP.pm',
-    LICENSE          => 'perl',
-    META_MERGE   => {
-        dynamic_config => 0,
-        'meta-spec' => {version => 2},
-        prereqs => {runtime => {requires => {perl => '5.008001'}}},
-        resources => {
-            bugtracker  => {web =>'http://github.com/genio/lwp-protocol-ghttp/issues'},
-            homepage    => 'http://github.com/genio/lwp-protocol-ghttp',
-            repository  => {
-                type => 'git',
-                url => 'http://github.com/genio/lwp-protocol-ghttp.git',
-                web => 'http://github.com/genio/lwp-protocol-ghttp',
-            },
-            x_MailingList => 'mailto:libwww@perl.org',
-            x_IRC => 'irc://irc.perl.org/#lwp',
-        },
-        # x_authority => 'cpan:LWWWP',
-        no_index => {directory => ['t']},
-    },
-    BUILD_REQUIRES => {
-        'HTTP::Daemon' => 6.0,
-        'Test::More' => 0,
-        'Test::Pod' => 0,
-        'Test::Pod::Coverage' => 0,
-        'Test::LWP::UserAgent' => 0,
-    },
-    PREREQ_PM => {
-        'HTTP::GHTTP' => 1.07,
-        'HTTP::Message' => 6.0,
-        'LWP' => 6.15,
-        'Try::Tiny' => 0.2,
-    },
-    dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
-    clean => { FILES => 'LWP-Protocol-GHTTP*' },
-    test => {TESTS => 't/*.t'},
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Provide GHTTP support for L<LWP::UserAgent> via L<HTTP::GHTTP>.",
+  "AUTHOR" => "Gisle Aas <gisle\@activestate.com>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "LWP-Protocol-GHTTP",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.008001",
+  "NAME" => "LWP::Protocol::GHTTP",
+  "PREREQ_PM" => {
+    "Carp" => 0,
+    "HTTP::GHTTP" => "1.07",
+    "HTTP::Message" => "6.0",
+    "LWP::UserAgent" => "6.15",
+    "Try::Tiny" => "0.24",
+    "strict" => 0,
+    "warnings" => 0
+  },
+  "TEST_REQUIRES" => {
+    "HTTP::Daemon" => "6.0",
+    "Test::More" => "0.88"
+  },
+  "VERSION" => "6.16",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
 );
+
+my %FallbackPrereqs = (
+  "Carp" => 0,
+  "HTTP::Daemon" => "6.0",
+  "HTTP::GHTTP" => "1.07",
+  "HTTP::Message" => "6.0",
+  "LWP::UserAgent" => "6.15",
+  "Test::More" => "0.88",
+  "Try::Tiny" => "0.24",
+  "strict" => 0,
+  "warnings" => 0
+);
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
