@@ -18,7 +18,7 @@ my $res = $ua->get('http://www.example.com');
 
 ## DESCRIPTION
 
-This module depends on the [Gnome libghttp](http://ftp.gnome.org/pub/gnome/sources/libghttp) project.  That project is no longer in development.  If you are trying to use this module, you'd likely do better to just use [LWP::Protocol::http](http://metacpan.org/pod/LWP::Protocol::http) or [LWP::Protocol::https](http://metacpan.org/pod/LWP::Protocol::https).
+This module depends on the [GNOME libghttp](http://ftp.gnome.org/pub/gnome/sources/libghttp) project.  That project is no longer in development.  If you are trying to use this module, you'd likely do better to just use [LWP::Protocol::http](http://metacpan.org/pod/LWP::Protocol::http) or [LWP::Protocol::https](http://metacpan.org/pod/LWP::Protocol::https).
 
 [LWP::Protocol::GHTTP](http://metacpan.org/pod/LWP::Protocol::GHTTP) is only capable of dispatching requests using the ```GET```, ```POST```, or ```HEAD``` verbs.
 
@@ -32,7 +32,7 @@ This module used to be bundled with [libwww-perl](https://metacpan.org/pod/LWP),
 
 It bears repeating:
 
-This module depends on the [Gnome libghttp](http://ftp.gnome.org/pub/gnome/sources/libghttp) project.  That project is no longer in development.  If you are trying to use this module, you'd likely do better to just use [LWP::Protocol::http](http://metacpan.org/pod/LWP::Protocol::http) or [LWP::Protocol::https](http://metacpan.org/pod/LWP::Protocol::https).
+This module depends on the [GNOME libghttp](http://ftp.gnome.org/pub/gnome/sources/libghttp) project.  That project is no longer in development.  If you are trying to use this module, you'd likely do better to just use [LWP::Protocol::http](http://metacpan.org/pod/LWP::Protocol::http) or [LWP::Protocol::https](http://metacpan.org/pod/LWP::Protocol::https).
 
 Also, [LWP::Protocol::GHTTP](http://metacpan.org/pod/LWP::Protocol::GHTTP) is only capable of dispatching requests using the ```GET```, ```POST```, or ```HEAD``` verbs.
 
