@@ -39,6 +39,7 @@ user    = genio
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
 spell_cmd = aspell list
+stopword = libghttp
 
 [RunExtraTests]
 
